fix align, fix width modal mobile menu

--- a/src/css/1-header.css
+++ b/src/css/1-header.css
@@ -4,7 +4,7 @@
 
 header .container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -37,6 +37,7 @@ header .container {
 /*Mobile-menu-end*/
 
 @media only screen and (min-width: 768px) {
+
   .header-logo {
     font-size: 20px;
     padding: 34px 0;
@@ -61,6 +62,10 @@ header .container {
 }
 
 @media only screen and (min-width: 1280px) {
+  header .container {
+    align-items: baseline;
+  }
+
   .header-logo {
     font-size: 20px;
     padding: 32px 0;
